# machine-insight

./: CMakeLists.txt  insight.cpp  insight.h
impl/: insight-cygwin.cpp  insight-mingw.cpp
